@@ -112,5 +112,7 @@ namespace Orthanc
 
     const char* GetProperty(const char* plugin,
                             _OrthancPluginProperty property) const;
+
+    void SetCommandLineArguments(int argc, char* argv[]);
   };
 }
